# bettercopter

./: .gitmodules  Application.cpp  Application.hpp  ArmSwitch.cpp  ArmSwitch.hpp  FlightController.cpp  FlightController.hpp  GPS.cpp  GPS.hpp  KalmanFilter.hpp  LedIndicator.cpp  LedIndicator.hpp  Makefile  ModeAltHold.cpp  ModeAltHold.hpp  ModeStab.cpp  ModeStab.hpp  PCLink.cpp  PCLink.hpp  PID.cpp  PID.hpp  README.md  SensorProvider.hpp  main.cpp  mavlink.h  parameters.txt  types.hpp
ground/chrome/: app.js  index.html  main.css  main.js  manifest.json  map.html
ground/chrome/js/: bigslide.js
include/c++/: cmath  cstddef  cstdint  cstdio  cstdlib  limits  new
include/glm/: glm.hpp
include/glm/detail/: func_exponential.inl  setup.hpp  type_float.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
mavlink/: mavlink_helpers.h  mavlink_types.h
mavlink/common/: mavlink_msg_attitude.h  mavlink_msg_heartbeat.h
old/: Filters.hpp  IMU.cpp  IMU.hpp
pidcalc/: app.js  index.html
simulator/: Application.cpp  Application.h  CMakeLists.txt  Copter.cpp  Copter.h  CopterEntity.cpp  CopterEntity.h  Makefile  README.md  Socket.cpp  Socket.h  cmake_install.cmake  main.cpp  sim_kernel.cpp  sim_kernel.h  time.cpp_
simulator/irrlicht/examples/10.Shaders/: Makefile  main.cpp
simulator/irrlicht/examples/21.Quake3Explorer/: Makefile  main.cpp
simulator/irrlicht/examples/Demo/: CDemo.cpp
simulator/irrlicht/include/: IVideoDriver.h  IrrCompileConfig.h  matrix4.h
simulator/irrlicht/source/Irrlicht/: CImageLoaderJPG.h  CImageWriterJPG.cpp  CLightSceneNode.cpp  CMakeCache.txt  CMakeLists.txt  COpenGLDriver.cpp  CSceneManager.cpp  CSceneNodeAnimatorCameraFPS.cpp  CSceneNodeAnimatorCameraFPS.h  Makefile  cmake_install.cmake
simulator/irrlicht/source/Irrlicht/aesGladman/: CMakeLists.txt
simulator/irrlicht/source/Irrlicht/bzip2/: CMakeLists.txt
simulator/irrlicht/source/Irrlicht/lzma/: CMakeLists.txt
